Fixed an issue with the player's background on Safari
Due to a bug in Safari, the background-color isn't inherited properly

--- a/src/css/components/player.scss
+++ b/src/css/components/player.scss
@@ -30,6 +30,10 @@
 		right: -9px;
 	}
 
+	// Due to a bug with Safari, we have to set the background-color when the animation started
+	// Otherwise, the player-progress-bg animation won't properly inherit its background
+	.player.animated { background-color: $color-media; }
+
 	/* Use a class for the animation so we can restart it */
 	.player.animated:before {
 		transform-origin: left;
